# Card-Catalog-POS

./: .gitignore  QUICKSTART.md  README.md  REFERENCE.md  WINDOWS_SETUP.md  checkoutdesignator.db  package-lock.json  pyproject.toml  start.ps1  start.sh
TimeTwister/: main.py
checkoutdesignator/: __init__.py  api.py  auth.py  cli.py  config.py  database.py  dependencies.py  exceptions.py  models.py  schemas.py  schemas_checklist.py
checkoutdesignator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
db_backups/: checkoutdesignator_20260302_225801.db  latest.db
docs/: BACKUP_SETUP.md  BARCODE_SCANNER.md  CHECKLIST_SYSTEM.md  DATABASE_BACKUP.md  DATA_ACCESS.md  DOCUMENTATION_CLEANUP.md  EXTERNAL_SYNC_EXAMPLE.py  INDEX.md  ORDER_SYSTEM.md  PREORDER_SET.md  PREORDER_SYSTEM.md  SETUP.md  STORE_CREDIT_EXTERNAL_API.md  architecture.md  gui.md
frontend/: .eslintrc.cjs  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo
scripts/: add_cost_tracking.py  backup_database.sh  clear_buylist_data.py  clear_preorder_data.py  clear_singles_data.py  daily_backup.sh  daily_shutdown_and_git_push.ps1  fix_preorder_allocations.py  migrate_add_cash_register.py  migrate_add_checklist.py  migrate_add_customer_fields.py  migrate_add_is_archived.py  migrate_add_payments.py  migrate_add_preorder_orders.py  migrate_add_store_credit.py  migrate_preorder_enhancements.py  register_8am_shutdown_task.ps1  reset_for_production.py  reset_preorder_claims.py  (+9 more)
(+76 files in other folders)
